# hackathon-todo

./: .gitignore  BRANCHING_STRATEGY.md  CLAUDE.md  EMAIL_SETUP_GUIDE.md  README.md  deploy_logs_railway.json  pyproject.toml  railway_logs.md  start-backend.sh  start-frontend.sh
.claude/skills/api-client-retry-auth/: SKILL.md
.claude/skills/backend-crud-api/: SKILL.md
.claude/skills/nextjs-better-auth-setup/: SKILL.md
.claude/skills/password-reset-auth/: SKILL.md
.claude/skills/react-form-validation-patterns/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  ACCEPTANCE_CRITERIA_VALIDATION.md  IMPLEMENTATION_STATUS.md  README.md  fix_enum_direct.py  pyproject.toml  railway.toml  requirements.txt  run_migration.sh
backend/migrations/: 001_add_priority_column.py  002_create_better_auth_tables.py  003_fix_priority_enum_case.py  README.md
backend/src/: config.py  main.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  tasks.py
backend/src/core/: __init__.py  auth.py  errors.py
backend/src/database/: __init__.py  connection.py  crud.py  init_db.py
backend/src/models/: __init__.py  task.py
backend/src/schemas/: __init__.py  task.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_api_delete.py  test_api_patch.py  test_api_update.py
backend/tests/unit/: test_auth.py  test_connection.py  test_crud.py  test_init_db.py  test_schemas.py  test_task_model.py
frontend/: .env.example  PHASE-3-COMPLETE.md  README.md  SETUP-BETTER-AUTH.md  TEST-RESULTS-PHASE-3.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: setup.ts
frontend/app/: layout.tsx  page.tsx
frontend/e2e/: auth.spec.ts  responsive.spec.ts  tasks.spec.ts
frontend/types/: api.ts  auth.ts  task.ts  ui.ts  user.ts
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-database-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-backend-api/: plan.md  spec.md  tasks.md
specs/004-frontend-nextjs/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/cli/: display.py  menu.py
src/models/: task.py
src/services/: task_service.py
tests/integration/: test_app_flow.py
(+97 files in other folders)
